[package]
name = "opencc"
version = "0.1.1"
authors = ["messense <messense@icloud.com>"]
description = "OpenCC binding for Rust"
repository = "https://github.com/messense/opencc-rs"
readme = "README.md"
keywords = ["opencc"]
license-file = "LICENSE"

[lib]
name = "opencc"

[dependencies]
libc = "*"
