[package]
name = "opencc"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
description = "OpenCC binding for Rust"
repository = "https://github.com/messense/opencc-rs"
documentation = "https://messense.github.io/opencc-rs"
readme = "README.md"
keywords = ["opencc"]
license = "MIT"

[lib]
name = "opencc"

[dependencies]
libc = "*"

[features]
unstable = []
